--- a/static/style.css
+++ b/static/style.css
@@ -60,3 +60,41 @@ input[type="text"]:focus {
 .btn-large {
   padding: 15px;
 }
+
+.result{
+  background-color: #f0f4f8; 
+  color: #333;
+  width: 400px;
+  margin: 80px auto;
+  background: #fff;
+  padding: 30px 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  transition: transform 0.2s ease;
+  text-align: center;
+}
+
+.result:hover {
+  transform: scale(1.05);
+}
+
+.result h2, .prediction-box{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px ;
+}
+
+.box{
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  margin: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 25%;
+}
+
+.input_data{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
